--- a/server/static/sass/_globals.scss
+++ b/server/static/sass/_globals.scss
@@ -7,8 +7,16 @@
  *
  * ========================================================================== */
 
+/* ========== MODES ========================================================= */
+
+$standalone: true;
+
 /* ========== COLORS ======================================================== */
 
 
-
 /* ========== SIZING AND LAYOUT ============================================= */
+
+$app_width: 300px;
+$app_height: 300px;
+
+$app_border_radius: 10px;
