--- a/server/static/sass/main.scss
+++ b/server/static/sass/main.scss
@@ -15,6 +15,41 @@
 
 @import "compass/utilities/general/clearfix";
 
+/* ========== MODE SWITCHING ================================================ */
+
+@if $standalone == true {
+
+    body {
+        @include background(image-url("mac_desktop.jpg"));
+        background-size: cover;
+    }
+
+    #app_container {
+        position: absolute;
+        top: 40px;
+        right: 400px;
+        @include box-shadow(0px 0px 20px #333);
+    }
+
+}
+
+#app_container {
+    width: $app_width;
+    height: $app_height;
+    overflow: hidden;
+    @include border-radius($app_border_radius);
+    background-color: #eaeaea;
+}
+
+#app_mask_wrapper {
+    @include border-radius($app_border_radius);
+
+    /* What. The. Fuck.
+     * http://stackoverflow.com/questions/5736503/how-to-make-css3-rounded-corners-hide-overflow-in-chrome-opera
+     */
+    -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
+}
+
 /*========== BASIC STYLES =================================================== */
 
 html {
