--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -12,7 +12,7 @@
 
         <div id="app_container">
             <div id="app_mask_wrapper">
-                <h1>Dossier Web Prototype</h1>
+                {{ first }}
             </div>
         </div>
 
