--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,22 +1,5 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no">
+{% extends "base.html" %}
 
-        <link rel="stylesheet" href="css/main.css">
-
-        <title>Dossier Web Prototype</title>
-    </head>
-    <body>
-
-        <div id="app_container">
-            <div id="app_mask_wrapper">
-                {{ first }}
-            </div>
-        </div>
-
-        <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-    </body>
-</html>
+{% block content %}
+    <h1>Index! {{ first }}</h1>
+{% endblock %}
