--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -112,7 +112,7 @@ body {
 #app_container {
   width: 400px;
   height: 500px;
-  overflow: hidden;
+  overflow-y: scroll;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
@@ -164,30 +164,31 @@ h2 {
   box-sizing: border-box;
   width: 100%;
   background-color: #e0e0e0;
-  padding: 10px;
+  padding: 12px;
 }
 
 /* line 82, ../sass/main.scss */
 table {
   width: 100%;
+  margin-top: -6px;
+  margin-bottom: -6px;
 }
 
-/* line 86, ../sass/main.scss */
+/* line 88, ../sass/main.scss */
 td {
-  padding: 6px 10px;
-  font-size: 14px;
+  padding: 6px 0px;
 }
-/* line 90, ../sass/main.scss */
+/* line 91, ../sass/main.scss */
 td:first-child {
   font-weight: bold;
 }
 
-/* line 95, ../sass/main.scss */
+/* line 96, ../sass/main.scss */
 .dossier {
   padding: 18px;
 }
 
-/* line 99, ../sass/main.scss */
+/* line 100, ../sass/main.scss */
 .section {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -196,6 +197,22 @@ td:first-child {
   border-radius: 4px;
   overflow: hidden;
   background-color: #eaeaea;
-  padding-bottom: 4px;
   margin-bottom: 16px;
+}
+
+/* line 107, ../sass/main.scss */
+.section_content {
+  padding: 12px 12px;
+  font-size: 14px;
+}
+
+/* line 112, ../sass/main.scss */
+.position {
+  padding: 4px 0px;
+  line-height: 1.3;
+  margin-bottom: 4px;
+}
+/* line 117, ../sass/main.scss */
+.position span {
+  font-weight: bold;
 }
