--- a/server/static/sass/main.scss
+++ b/server/static/sass/main.scss
@@ -36,7 +36,7 @@
 #app_container {
     width: $app_width;
     height: $app_height;
-    overflow: hidden;
+    overflow-y: scroll;
     @include border-radius($app_border_radius);
     background-color: white;
 }
@@ -76,16 +76,17 @@ h2 {
     @include box-sizing(border-box);
     width: 100%;
     background-color: #e0e0e0;
-    padding: 10px;
+    padding: 12px;
 }
 
 table {
     width: 100%;
+    margin-top: -6px;
+    margin-bottom: -6px;
 }
 
 td {
-    padding: 6px 10px;
-    font-size: 14px;
+    padding: 6px 0px;
 
     &:first-child {
         font-weight: bold;
@@ -100,6 +101,20 @@ td {
     @include border-radius(4px);
     overflow: hidden;
     background-color: #eaeaea;
-    padding-bottom: 4px;
     margin-bottom: 16px;
+}
+
+.section_content {
+    padding: 12px 12px;
+    font-size: 14px;
+}
+
+.position {
+    padding: 4px 0px;
+    line-height: 1.3;
+    margin-bottom: 4px;
+
+    span {
+        font-weight: bold;
+    }
 }
