--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -189,6 +189,23 @@ td:first-child {
 }
 
 /* line 100, ../sass/main.scss */
+.top_section {
+  text-align: center;
+}
+/* line 103, ../sass/main.scss */
+.top_section img {
+  display: inline-block;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  width: 140px;
+  height: 140px;
+  margin-bottom: 12px;
+}
+
+/* line 112, ../sass/main.scss */
 .section {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -200,19 +217,19 @@ td:first-child {
   margin-bottom: 16px;
 }
 
-/* line 107, ../sass/main.scss */
+/* line 119, ../sass/main.scss */
 .section_content {
   padding: 12px 12px;
   font-size: 14px;
 }
 
-/* line 112, ../sass/main.scss */
+/* line 124, ../sass/main.scss */
 .position {
   padding: 4px 0px;
   line-height: 1.3;
   margin-bottom: 4px;
 }
-/* line 117, ../sass/main.scss */
+/* line 129, ../sass/main.scss */
 .position span {
   font-weight: bold;
 }
