--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -157,42 +157,43 @@ h1 {
 
 /* line 73, ../sass/main.scss */
 h2 {
-  font-size: 18px;
+  font-size: 14px;
   font-weight: bold;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-  background-color: #e0e0e0;
+  background-color: #019bc6;
+  color: white;
   padding: 12px;
 }
 
-/* line 82, ../sass/main.scss */
+/* line 83, ../sass/main.scss */
 table {
   width: 100%;
   margin-top: -6px;
   margin-bottom: -6px;
 }
 
-/* line 88, ../sass/main.scss */
+/* line 89, ../sass/main.scss */
 td {
   padding: 6px 0px;
 }
-/* line 91, ../sass/main.scss */
+/* line 92, ../sass/main.scss */
 td:first-child {
   font-weight: bold;
 }
 
-/* line 96, ../sass/main.scss */
+/* line 97, ../sass/main.scss */
 .dossier {
   padding: 18px;
 }
 
-/* line 100, ../sass/main.scss */
+/* line 101, ../sass/main.scss */
 .top_section {
   text-align: center;
 }
-/* line 103, ../sass/main.scss */
+/* line 104, ../sass/main.scss */
 .top_section img {
   display: inline-block;
   -webkit-border-radius: 50%;
@@ -205,7 +206,7 @@ td:first-child {
   margin-bottom: 12px;
 }
 
-/* line 112, ../sass/main.scss */
+/* line 113, ../sass/main.scss */
 .section {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -217,19 +218,19 @@ td:first-child {
   margin-bottom: 16px;
 }
 
-/* line 119, ../sass/main.scss */
+/* line 120, ../sass/main.scss */
 .section_content {
   padding: 12px 12px;
   font-size: 14px;
 }
 
-/* line 124, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
 .position {
   padding: 4px 0px;
   line-height: 1.3;
   margin-bottom: 4px;
 }
-/* line 129, ../sass/main.scss */
+/* line 130, ../sass/main.scss */
 .position span {
   font-weight: bold;
 }
