Change native app size, add correct dossier1 photo

--- a/server/static/sass/_globals.scss
+++ b/server/static/sass/_globals.scss
@@ -9,7 +9,7 @@
 
 /* ========== MODES ========================================================= */
 
-$standalone: true;
+$standalone: false;
 
 /* ========== COLORS ======================================================== */
 
