--- a/server/templates/macros.html
+++ b/server/templates/macros.html
@@ -1,30 +1,37 @@
-{% macro info_single(prop, value) %}
-    <tr>
-        <td>{{ prop }}</td>
-        <td>{{ value }}</td>
-    </tr>
+{% macro info_single(prop, value, meta) %}
+    <div class="info_wrapper">
+        <div class="info">
+            <div class="prop">{{ prop }}</div>
+            <div class="value">{{ value }}</div>
+        </div>
+        {{ m.meta_info(meta) }}
+    </div>
 {% endmacro %}
 
 {% macro phone_numbers(phones) %}
-    <tr>
-        <td>Phone Numbers</td>
-        <td>
-            {% for phone in phones %}
-                {{ phone.number }} ({{ phone.type }})<br>
-            {% endfor %}
-        </td>
-    </tr>
+    <div class="info_wrapper">
+        <div class="info">
+            <div class="prop">Phone Numbers</div>
+            <div class="value">
+                {% for phone in phones %}
+                    {{ phone.number }} ({{ phone.type }})<br>
+                {% endfor %} 
+            </div>
+        </div>
+    </div>
 {% endmacro %}
 
 {% macro email_addresses(emails) %}
-    <tr>
-        <td>Email Address</td>
-        <td>
-            {% for email in emails %}
-                {{ email }}<br>
-            {% endfor %}
-        </td>
-    </tr>
+    <div class="info_wrapper">
+        <div class="info">
+            <div class="prop">Email Addresses</div>
+            <div class="value">
+                {% for email in emails %}
+                    {{ email }}<br>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 {% endmacro %}
 
 {% macro work(work_history) %}
@@ -51,4 +58,13 @@
         {{ address.street_address }}<br>
         {{ address.city }}, {{ address.state }} {{ address.zip}}
     {% endfor %}
+{% endmacro %}
+
+{% macro meta_info(meta) %}
+    {% if meta %}
+        <div class="meta">
+                {{ meta.source }}
+                {{ meta.fix }}
+        </div>
+    {% endif %}
 {% endmacro %}
