--- a/server/static/sass/main.scss
+++ b/server/static/sass/main.scss
@@ -97,7 +97,7 @@ td {
 */
 
 .info {
-    padding: 10px $section_content_padding;
+    padding: 8px $section_content_padding;
     overflow: hidden;
 
     &:hover {
@@ -150,10 +150,11 @@ td {
 
 .section_content {
     font-size: 14px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 
 .position {
-    padding: 4px 0px;
     line-height: 1.3;
     margin-bottom: 4px;
 
