Styling updates (no more blue bg titles, user-select: none)

--- a/server/static/sass/main.scss
+++ b/server/static/sass/main.scss
@@ -10,6 +10,7 @@
 /* ========== IMPORTS ======================================================= */
 @import "compass/reset";
 @import "compass/css3";
+@import "compass/css3/user-interface";
 @import "globals";
 @import "animations";
 
@@ -52,6 +53,10 @@
 
 /*========== BASIC STYLES =================================================== */
 
+* {
+    @include user-select(none);
+}
+
 html {
     /* prevent webkit and ms mobile browsers from resizing text */
     -webkit-text-size-adjust: 100%;
@@ -71,13 +76,14 @@ h1 {
 }
 
 h2 {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
     @include box-sizing(border-box);
     width: 100%;
-    background-color: #019bc6;
-    color: white;
     padding: 12px;
+    color: #019bc6;
+    border-bottom: 1px dashed #ccc;
+    text-transform: uppercase;
 }
 
 /*
@@ -119,10 +125,9 @@ td {
 .meta {
     display: none;
     padding: 16px $section_content_padding;
-    color: #222;
-    background-color: #ccc;
+    color: #444;
+    background-color: #F0F0F0;
     font-style: italic;
-    @include box-shadow(inset 0px 2px 4px #aaa);
 }
 
 .dossier {
@@ -143,8 +148,8 @@ td {
 
 .section {
     @include border-radius(4px);
+    border: 1px solid #ccc;
     overflow: hidden;
-    background-color: #eaeaea;
     margin-bottom: 16px;
 }
 
