--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -92,7 +92,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
  *
  * ========================================================================== */
 /* ========== MODE SWITCHING ================================================ */
-/* line 36, ../sass/main.scss */
+/* line 37, ../sass/main.scss */
 #app_container {
   width: 400px;
   height: 500px;
@@ -105,7 +105,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   background-color: white;
 }
 
-/* line 44, ../sass/main.scss */
+/* line 45, ../sass/main.scss */
 #app_mask_wrapper {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -119,7 +119,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 /*========== BASIC STYLES =================================================== */
-/* line 55, ../sass/main.scss */
+/* line 56, ../sass/main.scss */
+* {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+/* line 60, ../sass/main.scss */
 html {
   /* prevent webkit and ms mobile browsers from resizing text */
   -webkit-text-size-adjust: 100%;
@@ -127,29 +134,30 @@ html {
   height: 100%;
 }
 
-/* line 63, ../sass/main.scss */
+/* line 68, ../sass/main.scss */
 body {
   font-family: "HelveticaNeue", Arial, Helvetica, sans-serif;
   height: 100%;
 }
 
-/* line 68, ../sass/main.scss */
+/* line 73, ../sass/main.scss */
 h1 {
   font-size: 32px;
   margin-bottom: 16px;
 }
 
-/* line 73, ../sass/main.scss */
+/* line 78, ../sass/main.scss */
 h2 {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-  background-color: #019bc6;
-  color: white;
   padding: 12px;
+  color: #019bc6;
+  border-bottom: 1px dashed #ccc;
+  text-transform: uppercase;
 }
 
 /*
@@ -167,51 +175,48 @@ td {
     }
 }
 */
-/* line 99, ../sass/main.scss */
+/* line 105, ../sass/main.scss */
 .info {
   padding: 8px 12px;
   overflow: hidden;
 }
-/* line 103, ../sass/main.scss */
+/* line 109, ../sass/main.scss */
 .info:hover {
   background-color: #f0f0f0;
   cursor: pointer;
 }
 
-/* line 109, ../sass/main.scss */
+/* line 115, ../sass/main.scss */
 .prop {
   font-weight: bold;
   float: left;
   width: 140px;
 }
 
-/* line 115, ../sass/main.scss */
+/* line 121, ../sass/main.scss */
 .value {
   float: left;
 }
 
-/* line 119, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
 .meta {
   display: none;
   padding: 16px 12px;
-  color: #222;
-  background-color: #ccc;
+  color: #444;
+  background-color: #F0F0F0;
   font-style: italic;
-  -webkit-box-shadow: inset 0px 2px 4px #aaaaaa;
-  -moz-box-shadow: inset 0px 2px 4px #aaaaaa;
-  box-shadow: inset 0px 2px 4px #aaaaaa;
 }
 
-/* line 128, ../sass/main.scss */
+/* line 133, ../sass/main.scss */
 .dossier {
   padding: 18px;
 }
 
-/* line 132, ../sass/main.scss */
+/* line 137, ../sass/main.scss */
 .top_section {
   text-align: center;
 }
-/* line 135, ../sass/main.scss */
+/* line 140, ../sass/main.scss */
 .top_section img {
   display: inline-block;
   -webkit-border-radius: 50%;
@@ -224,31 +229,31 @@ td {
   margin-bottom: 12px;
 }
 
-/* line 144, ../sass/main.scss */
+/* line 149, ../sass/main.scss */
 .section {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
   border-radius: 4px;
+  border: 1px solid #ccc;
   overflow: hidden;
-  background-color: #eaeaea;
   margin-bottom: 16px;
 }
 
-/* line 151, ../sass/main.scss */
+/* line 156, ../sass/main.scss */
 .section_content {
   font-size: 14px;
   padding-top: 3px;
   padding-bottom: 3px;
 }
 
-/* line 157, ../sass/main.scss */
+/* line 162, ../sass/main.scss */
 .position {
   line-height: 1.3;
   margin-bottom: 4px;
 }
-/* line 161, ../sass/main.scss */
+/* line 166, ../sass/main.scss */
 .position span {
   font-weight: bold;
 }
