Added visible/invisible states to dossier, added appropriate html and css

--- a/server/static/sass/_globals.scss
+++ b/server/static/sass/_globals.scss
@@ -9,7 +9,7 @@
 
 /* ========== MODES ========================================================= */
 
-$standalone: false;
+$standalone: true;
 
 /* ========== COLORS ======================================================== */
 
