--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -92,6 +92,22 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
  *
  * ========================================================================== */
 /* ========== MODE SWITCHING ================================================ */
+/* line 23, ../sass/main.scss */
+body {
+  background: url('/images/mac_desktop.jpg?1394264102');
+  background-size: cover;
+}
+
+/* line 28, ../sass/main.scss */
+#app_container {
+  position: absolute;
+  top: 40px;
+  right: 400px;
+  -webkit-box-shadow: 0px 0px 20px #333333;
+  -moz-box-shadow: 0px 0px 20px #333333;
+  box-shadow: 0px 0px 20px #333333;
+}
+
 /* line 37, ../sass/main.scss */
 #app_container {
   width: 400px;
@@ -175,48 +191,17 @@ td {
     }
 }
 */
-/* line 105, ../sass/main.scss */
-.info {
-  padding: 8px 12px;
-  overflow: hidden;
-}
-/* line 109, ../sass/main.scss */
-.info:hover {
-  background-color: #f0f0f0;
-  cursor: pointer;
-}
-
-/* line 115, ../sass/main.scss */
-.prop {
-  font-weight: bold;
-  float: left;
-  width: 140px;
-}
-
-/* line 121, ../sass/main.scss */
-.value {
-  float: left;
-}
-
-/* line 125, ../sass/main.scss */
-.meta {
-  display: none;
-  padding: 16px 12px;
-  color: #444;
-  background-color: #F0F0F0;
-  font-style: italic;
-}
-
-/* line 133, ../sass/main.scss */
+/*========== PRIMARY LAYOUT ================================================= */
+/* line 106, ../sass/main.scss */
 .dossier {
   padding: 18px;
 }
 
-/* line 137, ../sass/main.scss */
+/* line 110, ../sass/main.scss */
 .top_section {
   text-align: center;
 }
-/* line 140, ../sass/main.scss */
+/* line 113, ../sass/main.scss */
 .top_section img {
   display: inline-block;
   -webkit-border-radius: 50%;
@@ -229,7 +214,7 @@ td {
   margin-bottom: 12px;
 }
 
-/* line 149, ../sass/main.scss */
+/* line 122, ../sass/main.scss */
 .section {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -241,19 +226,60 @@ td {
   margin-bottom: 16px;
 }
 
-/* line 156, ../sass/main.scss */
+/* line 129, ../sass/main.scss */
 .section_content {
   font-size: 14px;
   padding-top: 3px;
   padding-bottom: 3px;
 }
 
-/* line 162, ../sass/main.scss */
+/*========== NOT READY YET STYLES =========================================== */
+/* line 137, ../sass/main.scss */
+.not_ready_message {
+  text-align: center;
+  margin-top: 100px;
+}
+
+/*========== INFO BLOCKS ==================================================== */
+/* line 144, ../sass/main.scss */
+.info {
+  padding: 8px 12px;
+  overflow: hidden;
+}
+/* line 148, ../sass/main.scss */
+.info:hover {
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
+
+/* line 154, ../sass/main.scss */
+.prop {
+  font-weight: bold;
+  float: left;
+  width: 140px;
+}
+
+/* line 160, ../sass/main.scss */
+.value {
+  float: left;
+}
+
+/* line 164, ../sass/main.scss */
+.meta {
+  display: none;
+  padding: 16px 12px;
+  color: #444;
+  background-color: #F0F0F0;
+  font-style: italic;
+}
+
+/*========== SECTION SPECIFIC STYLES ======================================== */
+/* line 174, ../sass/main.scss */
 .position {
   line-height: 1.3;
   margin-bottom: 4px;
 }
-/* line 166, ../sass/main.scss */
+/* line 178, ../sass/main.scss */
 .position span {
   font-weight: bold;
 }
