--- a/server/templates/dossier.html
+++ b/server/templates/dossier.html
@@ -3,75 +3,82 @@
 {% import "./macros.html" as m %}
 
 {% block content %}
-    <div class="dossier">
-        <div class="top_section">
-        {% if images %}
-            <img class="primary_img" src="{{ images.primary }}"/>
-        {% endif %}
-        <h1>{{ basics.name.first }} {{ basics.name.last }}</h1>
-        {{ m.meta_info(basics.name.meta) }}
+    {% if !visible %}
+        <div class="not_ready_message">
+            <img src="/images/atom.gif" />
+            <h1>Gathering Information</h1>
+            <p>Please check back later</p>
+        </div>
+    {% else %}
+        <div class="dossier">
+            <div class="top_section">
+            {% if images %}
+                <img class="primary_img" src="{{ images.primary }}"/>
+            {% endif %}
+            <h1>{{ basics.name.first }} {{ basics.name.last }}</h1>
+            {{ m.meta_info(basics.name.meta) }}
+            </div>
+
+            {% if basics %}
+                <div class="section">
+                    <h2>Basic Information</h2>
+                    <div class="section_content">
+                        {{ m.info_single("Hometown", basics.hometown.city + ", " + basics.hometown.state, basics.hometown.meta ) }}
+                        {{ m.info_single("Birthdate", basics.birthdate.month + " " + basics.birthdate.date, basics.birthdate.meta ) }}
+                        {{ m.phone_numbers(basics.phone_numbers) }}
+                        {{ m.email_addresses(basics.email_addresses) }}
+                    </div>
+                </div>
+            {% endif %}
+
+            {% if education %}
+                <div class="section">
+                    <h2>Education Information</h2>
+                    <div class="section_content">
+                        {{ m.info_single("School", education.school, education.meta) }}
+                        {{ m.info_single("Major", education.major, education.meta) }}
+                        {{ m.info_single("Grad. Year", education.grad_year, education.meta) }}
+                    </div>
+                </div>
+            {% endif %}
+
+            {% if work_history %}
+                <div class="section">
+                    <h2>Work History</h2>
+                    <div class="section_content">
+                        {{ m.work(work_history) }}
+                    </div>
+                </div>
+            {% endif %}
+
+            {% if interests %}
+                <div class="section">
+                    <h2>Interests</h2>
+                    <div class="section_content">
+                        {{ m.interest_list(interests) }}
+                    </div>
+                </div>
+            {% endif %}
+
+            {% if social_accounts %}
+                <div class="section">
+                    <h2>Social Accounts</h2>
+                    <div class="section_content">
+                        {{ m.social(social_accounts) }}
+                    </div>
+                </div>
+            {% endif %}
+
+            {% if previous_known_addresses %}
+                <div class="section">
+                    <h2>Previous Known Addresses</h2>
+                    <div class="section_content">
+                        {{ m.address_list(previous_known_addresses) }}
+                    </div>
+                </div>
+            {% endif %}
+
         </div>
 
-        {% if basics %}
-            <div class="section">
-                <h2>Basic Information</h2>
-                <div class="section_content">
-                    {{ m.info_single("Hometown", basics.hometown.city + ", " + basics.hometown.state, basics.hometown.meta ) }}
-                    {{ m.info_single("Birthdate", basics.birthdate.month + " " + basics.birthdate.date, basics.birthdate.meta ) }}
-                    {{ m.phone_numbers(basics.phone_numbers) }}
-                    {{ m.email_addresses(basics.email_addresses) }}
-                </div>
-            </div>
-        {% endif %}
-
-        {% if education %}
-            <div class="section">
-                <h2>Education Information</h2>
-                <div class="section_content">
-                    {{ m.info_single("School", education.school, education.meta) }}
-                    {{ m.info_single("Major", education.major, education.meta) }}
-                    {{ m.info_single("Grad. Year", education.grad_year, education.meta) }}
-                </div>
-            </div>
-        {% endif %}
-
-        {% if work_history %}
-            <div class="section">
-                <h2>Work History</h2>
-                <div class="section_content">
-                    {{ m.work(work_history) }}
-                </div>
-            </div>
-        {% endif %}
-
-        {% if interests %}
-            <div class="section">
-                <h2>Interests</h2>
-                <div class="section_content">
-                    {{ m.interest_list(interests) }}
-                </div>
-            </div>
-        {% endif %}
-
-        {% if social_accounts %}
-            <div class="section">
-                <h2>Social Accounts</h2>
-                <div class="section_content">
-                    <table>
-                        {{ m.social(social_accounts) }}
-                    </table>
-                </div>
-            </div>
-        {% endif %}
-
-        {% if previous_known_addresses %}
-            <div class="section">
-                <h2>Previous Known Addresses</h2>
-                <div class="section_content">
-                    {{ m.address_list(previous_known_addresses) }}
-                </div>
-            </div>
-        {% endif %}
-
-    </div>
+    {% endif %}
 {% endblock %}
