--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -92,22 +92,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
  *
  * ========================================================================== */
 /* ========== MODE SWITCHING ================================================ */
-/* line 23, ../sass/main.scss */
-body {
-  background: url('/images/mac_desktop.jpg?1394264102');
-  background-size: cover;
-}
-
-/* line 28, ../sass/main.scss */
-#app_container {
-  position: absolute;
-  top: 40px;
-  right: 400px;
-  -webkit-box-shadow: 0px 0px 20px #333333;
-  -moz-box-shadow: 0px 0px 20px #333333;
-  box-shadow: 0px 0px 20px #333333;
-}
-
 /* line 37, ../sass/main.scss */
 #app_container {
   width: 400px;
@@ -152,17 +136,18 @@ html {
 
 /* line 68, ../sass/main.scss */
 body {
-  font-family: "HelveticaNeue", Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", "HelveticaNeue", Arial, Helvetica, sans-serif;
   height: 100%;
 }
 
 /* line 73, ../sass/main.scss */
 h1 {
   font-size: 32px;
+  font-weight: 100;
   margin-bottom: 16px;
 }
 
-/* line 78, ../sass/main.scss */
+/* line 79, ../sass/main.scss */
 h2 {
   font-size: 12px;
   font-weight: bold;
@@ -192,16 +177,16 @@ td {
 }
 */
 /*========== PRIMARY LAYOUT ================================================= */
-/* line 106, ../sass/main.scss */
+/* line 107, ../sass/main.scss */
 .dossier {
   padding: 18px;
 }
 
-/* line 110, ../sass/main.scss */
+/* line 111, ../sass/main.scss */
 .top_section {
   text-align: center;
 }
-/* line 113, ../sass/main.scss */
+/* line 114, ../sass/main.scss */
 .top_section img {
   display: inline-block;
   -webkit-border-radius: 50%;
@@ -214,7 +199,7 @@ td {
   margin-bottom: 12px;
 }
 
-/* line 122, ../sass/main.scss */
+/* line 123, ../sass/main.scss */
 .section {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -226,7 +211,7 @@ td {
   margin-bottom: 16px;
 }
 
-/* line 129, ../sass/main.scss */
+/* line 130, ../sass/main.scss */
 .section_content {
   font-size: 14px;
   padding-top: 3px;
@@ -234,37 +219,42 @@ td {
 }
 
 /*========== NOT READY YET STYLES =========================================== */
-/* line 137, ../sass/main.scss */
+/* line 138, ../sass/main.scss */
 .not_ready_message {
   text-align: center;
   margin-top: 100px;
 }
+/* line 142, ../sass/main.scss */
+.not_ready_message p {
+  font-weight: 100;
+  font-style: italic;
+}
 
 /*========== INFO BLOCKS ==================================================== */
-/* line 144, ../sass/main.scss */
+/* line 150, ../sass/main.scss */
 .info {
   padding: 8px 12px;
   overflow: hidden;
 }
-/* line 148, ../sass/main.scss */
+/* line 154, ../sass/main.scss */
 .info:hover {
   background-color: #f0f0f0;
   cursor: pointer;
 }
 
-/* line 154, ../sass/main.scss */
+/* line 160, ../sass/main.scss */
 .prop {
   font-weight: bold;
   float: left;
   width: 140px;
 }
 
-/* line 160, ../sass/main.scss */
+/* line 166, ../sass/main.scss */
 .value {
   float: left;
 }
 
-/* line 164, ../sass/main.scss */
+/* line 170, ../sass/main.scss */
 .meta {
   display: none;
   padding: 16px 12px;
@@ -274,12 +264,12 @@ td {
 }
 
 /*========== SECTION SPECIFIC STYLES ======================================== */
-/* line 174, ../sass/main.scss */
+/* line 180, ../sass/main.scss */
 .position {
   line-height: 1.3;
   margin-bottom: 4px;
 }
-/* line 178, ../sass/main.scss */
+/* line 184, ../sass/main.scss */
 .position span {
   font-weight: bold;
 }
