--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
+        <!-- web fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
+
         <link rel="stylesheet" href="/css/main.css">
 
         <title>Dossier Web Prototype</title>
