--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -182,24 +182,20 @@ td {
   padding: 18px;
 }
 
-/* line 111, ../sass/main.scss */
-.top_section {
-  text-align: center;
-}
-/* line 114, ../sass/main.scss */
+/* line 113, ../sass/main.scss */
 .top_section img {
   display: inline-block;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%;
   width: 140px;
   height: 140px;
   margin-bottom: 12px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  -webkit-box-shadow: 0px 2px 6px #cccccc;
+  -moz-box-shadow: 0px 2px 6px #cccccc;
+  box-shadow: 0px 2px 6px #cccccc;
 }
 
-/* line 123, ../sass/main.scss */
+/* line 124, ../sass/main.scss */
 .section {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -211,7 +207,7 @@ td {
   margin-bottom: 16px;
 }
 
-/* line 130, ../sass/main.scss */
+/* line 131, ../sass/main.scss */
 .section_content {
   font-size: 14px;
   padding-top: 3px;
@@ -219,42 +215,42 @@ td {
 }
 
 /*========== NOT READY YET STYLES =========================================== */
-/* line 138, ../sass/main.scss */
+/* line 139, ../sass/main.scss */
 .not_ready_message {
   text-align: center;
   margin-top: 100px;
 }
-/* line 142, ../sass/main.scss */
+/* line 143, ../sass/main.scss */
 .not_ready_message p {
   font-weight: 100;
   font-style: italic;
 }
 
 /*========== INFO BLOCKS ==================================================== */
-/* line 150, ../sass/main.scss */
+/* line 151, ../sass/main.scss */
 .info {
   padding: 8px 12px;
   overflow: hidden;
 }
-/* line 154, ../sass/main.scss */
+/* line 155, ../sass/main.scss */
 .info:hover {
   background-color: #f0f0f0;
   cursor: pointer;
 }
 
-/* line 160, ../sass/main.scss */
+/* line 161, ../sass/main.scss */
 .prop {
   font-weight: bold;
   float: left;
   width: 140px;
 }
 
-/* line 166, ../sass/main.scss */
+/* line 167, ../sass/main.scss */
 .value {
   float: left;
 }
 
-/* line 170, ../sass/main.scss */
+/* line 171, ../sass/main.scss */
 .meta {
   display: none;
   padding: 16px 12px;
@@ -264,12 +260,17 @@ td {
 }
 
 /*========== SECTION SPECIFIC STYLES ======================================== */
-/* line 180, ../sass/main.scss */
+/* line 181, ../sass/main.scss */
 .position {
   line-height: 1.3;
   margin-bottom: 4px;
 }
-/* line 184, ../sass/main.scss */
+/* line 185, ../sass/main.scss */
 .position span {
   font-weight: bold;
+}
+
+/* line 191, ../sass/main.scss */
+.section-social_accounts .prop {
+  width: 100px;
 }
